--- a/package.json
+++ b/package.json
@@ -1,18 +1,37 @@
 {
   "name": "travel-log",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "start": "expo start --clear",
+    "web": "expo start --web",
+    "ios": "expo run:ios",
+    "android": "expo run:android",
+    "build:ios": "expo run:ios",
+    "build:android": "expo run:android"
   },
   "dependencies": {
+    "@expo-google-fonts/geologica": "^0.4.2",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-navigation/bottom-tabs": "^7.8.6",
+    "@react-navigation/native-stack": "^7.8.0",
     "expo": "~54.0.25",
+    "expo-font": "~14.0.10",
+    "expo-image": "~3.0.11",
+    "expo-image-picker": "~17.0.9",
+    "expo-media-library": "~18.2.1",
+    "expo-router": "^6.0.17",
+    "expo-splash-screen": "^31.0.13",
     "expo-status-bar": "~3.0.8",
+    "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.29.1",
+    "react-native-reanimated": "^4.2.0",
+    "react-native-view-shot": "4.0.3",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.7.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
